<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/background2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/todo"
        android:scaleType="centerCrop"
        android:src="@drawable/backgroundthanks"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/choose2"
        android:layout_width="79dp"
        android:layout_height="75dp"
        android:layout_weight="1"
        android:background="@xml/button_yes"
        android:onClick="OnClickYes"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textAlignment="center"
        android:textColor="@color/colorBlack"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.91" />

    <ImageView
        android:id="@+id/plate_thanks"
        android:layout_width="160dp"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/plate1_food1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/background2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.529" />

    <ImageView
        android:id="@+id/pet_thanks"
        android:layout_width="311dp"
        android:layout_height="235dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/background2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/background2"
        app:layout_constraintVertical_bias="0.372"
        app:srcCompat="@drawable/dog" />

    <TextView
        android:id="@+id/text_tanks"
        android:layout_width="308dp"
        android:layout_height="73dp"
        android:fontFamily="@font/main_temp"
        android:text="@string/thanks"
        android:textAlignment="center"

        android:textColor="@color/colorWhite"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_tanks2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/main_temp"
        android:text="@string/share"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"

        android:textSize="30dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.98" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/background2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.75">

        <ImageView
            android:id="@+id/imageView5"
            style="@style/mystyle1"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="1"

            app:srcCompat="@drawable/fb" />

        <ImageView
            android:id="@+id/imageView4"
            style="@style/mystyle1"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/vk" />

        <ImageView
            android:id="@+id/imageView3"
            style="@style/mystyle1"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/twitter" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>