<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".startup.ChooseDog">


    <ImageView
        android:id="@+id/back"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/todo"
        android:scaleType="centerCrop"
        android:src="@drawable/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/back_dog2"
        android:layout_width="350dp"
        android:layout_height="350dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.55"
        app:srcCompat="@drawable/back_dog" />

    <ImageView
        android:id="@+id/shadow2"
        android:layout_width="206dp"
        android:layout_height="40dp"
        android:layout_marginTop="156dp"
        app:layout_constraintBottom_toTopOf="@+id/button7"
        app:layout_constraintEnd_toEndOf="@+id/back_dog2"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="@+id/pet2"
        app:layout_constraintTop_toTopOf="@+id/back_dog2"
        app:layout_constraintVertical_bias="0.75"
        app:srcCompat="@drawable/shadow_dog" />

    <ImageView
        android:id="@+id/pet2"
        android:layout_width="320dp"
        android:layout_height="320dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="@+id/back"
        app:layout_constraintEnd_toEndOf="@+id/back"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.559" />

    <ImageView
        android:id="@+id/pet22"
        android:layout_width="320dp"
        android:layout_height="320dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="@+id/back"
        app:layout_constraintEnd_toEndOf="@+id/back"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.559" />

    <ImageView
        android:id="@+id/pet21"
        android:layout_width="320dp"
        android:layout_height="320dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="@+id/back"
        app:layout_constraintEnd_toEndOf="@+id/back"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.559" />

    <ImageView
        android:id="@+id/pet"
        android:layout_width="320dp"
        android:layout_height="320dp"
        android:contentDescription="@string/todo"

        app:layout_constraintBottom_toBottomOf="@+id/back"
        app:layout_constraintEnd_toEndOf="@+id/back"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.559" />

    <Button
        android:id="@+id/right"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@xml/button_r"
        android:onClick="OnMyClickRight2"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.54" />

    <Button
        android:id="@+id/left"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@xml/button_l"
        android:onClick="OnMyClickLeft2"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.54" />

    <TextView
        android:id="@+id/choose_ur_fighter2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/main_temp"
        android:text="@string/breed1"
        android:textAlignment="center"
        android:textColor="#1A635C"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/back"
        app:layout_constraintStart_toStartOf="@+id/back"
        app:layout_constraintTop_toTopOf="@+id/back"
        app:layout_constraintVertical_bias="0.187" />

    <TextView
        android:id="@+id/choose_ur_fighter"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:fontFamily="@font/main_temp"
        android:text="@string/choose_breed"
        android:textAlignment="center"
        android:textColor="#1A635C"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/back"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/back"
        app:layout_constraintTop_toTopOf="@+id/back"
        app:layout_constraintVertical_bias="0.083" />

    <Button
        android:id="@+id/backd"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:background="@xml/button_l"
        android:onClick="OnClickBack"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textAlignment="center"
        android:textColor="@color/colorBlack"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.075"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/back"
        app:layout_constraintVertical_bias="0.04" />

    <Button
        android:id="@+id/choose"
        android:layout_width="79dp"
        android:layout_height="75dp"
        android:layout_weight="1"
        android:background="@xml/button_yes"
        android:onClick="OnClick2"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textAlignment="center"
        android:textColor="@color/colorBlack"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.954" />

    <Button
        android:id="@+id/button6"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:background="@drawable/pooodle_color_pink"
        android:onClick="OnClickColor2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/back"
        app:layout_constraintVertical_bias="0.795" />

    <Button
        android:id="@+id/button5"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:background="@drawable/pooodle_color_orange"
        android:onClick="OnClickColor1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/back"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.795" />

    <Button
        android:id="@+id/button7"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:background="@drawable/pooodle_color_white"
        android:onClick="OnClickColor3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.795" />

</androidx.constraintlayout.widget.ConstraintLayout>